Foundational 3.0 code changes

--- a/README
+++ b/README
@@ -18,7 +18,7 @@
     along with this program.  If not, see <http://www.gnu.org/licenses/>.
 *******************************************************************************/
 
-README for Command-Line Prodigal, Version 2.7.0
+README for Command-Line Prodigal, Version 3.0.0-devel.1.0
 
 I.  Introduction
 
