--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,13 @@
+VERSION 2.6.1
+
+* Fixed a bug that mainly affected Mac compiles 7/2013 and
+posted to Google Code and Github.  Re-released this version 8/2014,
+but the source is identical to "2.60bugfix1" except for updating
+dates and modifying the Makefile/README.
+* Moved to semantic versioning (major.minor.patch) with the 8/2014
+re-release.  Committed to being more rigorous about this moving
+forward.
+
 VERSION 2.60
 
 * Minor Output Changes:  There are some output changes in this version.  See
